test/files_test/errors/redefine_builtin_error.scm
; Test: Redefine builtin then error - should return exit code 84
(define + 42)
(+ 1 2)
